Scaffold required files and services

--- a/PBI-Planespotting/appsettings.json
+++ b/PBI-Planespotting/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "API": {
+    "GetAll": "https://infax.com/webfids/pbi/2016/fids-pbi.json"
+  }
 }
