--- a/PBI-Planespotting/appsettings.json
+++ b/PBI-Planespotting/appsettings.json
@@ -1,12 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "API": {
-    "GetAll": "https://infax.com/webfids/pbi/2016/fids-pbi.json"
+    "Flights": "https://infax.com/webfids/pbi/2016/"
   }
 }
