--- a/PBI-Planespotting/PBI-Planespotting.csproj
+++ b/PBI-Planespotting/PBI-Planespotting.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>PBI_Planespotting</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
 </Project>
